--- a/fiskerman.html
+++ b/fiskerman.html
@@ -29,6 +29,7 @@
             <li> Cast for fish</li> 
             <li> WASD to cast and reel</li> 
             <li> P to let out slack</li> 
+            <li> O to pull in slack</li> 
             <li> Spacebar to lock reel</li> 
         </ul>
       </aside>
